--- a/index.html
+++ b/index.html
@@ -1,18 +1,59 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Vikas Gaurav | Portfolio</title>
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <!-- BS icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+
+    <!-- Own CSS -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <div class="page-container">
-        <div class="hero-cotainer">
-            <div class="name">
-                <h2>Vikas Gaurav</h2>
+    <div class="page-container d-flex justify-content-center align-items-center">
+        <div class="hero-cotainer text-white container row d-flex justify-content-between">
+            <div class="col-12 col-md-3">
+                <div class="user-image-container mx-auto mb-3 rounded-circle overflow-hidden w-100">
+                    <img src="https://scontent.fdel27-3.fna.fbcdn.net/v/t1.6435-9/132870905_1881370512017315_5297069505189647629_n.jpg?_nc_cat=104&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=dY1B0kMYfm0AX_BP8x5&_nc_ht=scontent.fdel27-3.fna&oh=74b21d8293934581b0b26d85f28b75ca&oe=6155464E"
+                        alt="Vikas Gaurav Github Image" class="img-fluid">
+                </div>
+            </div>
+            <div class="col-12 col-md-9 profile-info">
+                <div class="name">
+                    <h1>Vikas Gaurav</h1>
+                </div>
+                <div class="tag-line mt-3 mb-5">
+                    <h6>I'm a passionate <span class="border-bottom"> Web Developer</span> from New Delhi</h6>
+                </div>
+                <div class="social-btns d-flex justify-content-start align-items-center">
+                    <a href="https://www.linkedin.com/in/vikas-gaurav/" target="_BLANK" class="d-block text-decoration-none rounded-circle me-2 cursor-pointer d-flex justify-content-center align-items-center bg-dark"><span class="bi-linkedin"></span></a>
+                    <a href="#" class="d-block text-decoration-none rounded-circle me-2 cursor-pointer d-flex justify-content-center align-items-center bg-dark"><span class="bi-instagram"></span></a>
+                    <a href="#" class="d-block text-decoration-none rounded-circle me-2 cursor-pointer d-flex justify-content-center align-items-center bg-dark"><span class="bi-facebook"></span></a>
+                    <a href="#" class="d-block text-decoration-none rounded-circle me-2 cursor-pointer d-flex justify-content-center align-items-center bg-dark"><span class="bi-twitter"></span></a>
+                </div>
             </div>
         </div>
     </div>
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> -->
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    -->
 </body>
+
 </html>
