--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="hero-cotainer text-white container row d-flex justify-content-between">
             <div class="col-12 col-md-3">
                 <div class="user-image-container mx-auto mb-3 rounded-circle overflow-hidden w-100">
-                    <img src="https://scontent.fdel27-3.fna.fbcdn.net/v/t1.6435-9/132870905_1881370512017315_5297069505189647629_n.jpg?_nc_cat=104&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=dY1B0kMYfm0AX_BP8x5&_nc_ht=scontent.fdel27-3.fna&oh=74b21d8293934581b0b26d85f28b75ca&oe=6155464E"
+                    <img src="https://media-exp1.licdn.com/dms/image/C5103AQEt6V1rAGK7Ag/profile-displayphoto-shrink_800_800/0/1538152838609?e=1642636800&v=beta&t=4U2l_BFKsXHahRcJxoBstsUPqOwPUtw8YoSvg5pAQMw"
                         alt="Vikas Gaurav Github Image" class="img-fluid">
                 </div>
             </div>
